tests/parser/fail/02_declaration_keyword.zulerr
true=42;true
---
EXPECTED_VARIABLE_AT_DECLARATION
